--- a/Predictor.ipynb
+++ b/Predictor.ipynb
@@ -644,22 +644,22 @@
     "\n",
     "plt.figure(figsize=(20,30))\n",
     "plt.subplot(321)\n",
-    "plt.title('Preços dado que bom')\n",
+    "plt.title('Preços dada condição boa')\n",
     "plt.hist(dados.loc[dados.condition == 'good']['price'],bins,edgecolor='white',density=True)\n",
     "plt.subplot(322)\n",
-    "plt.title('Preços dado que excelente')\n",
+    "plt.title('Preços dada condição excelente')\n",
     "plt.hist(dados.loc[dados.condition == 'excellent']['price'],bins,edgecolor='white',density=True)\n",
     "plt.subplot(323)\n",
-    "plt.title('Preços dado que como novo')\n",
+    "plt.title('Preços dada condição novo')\n",
     "plt.hist(dados.loc[dados.condition == 'like new']['price'],bins,edgecolor='white',density=True)\n",
     "plt.subplot(324)\n",
-    "plt.title('Preços dado que mediano')\n",
+    "plt.title('Preços dada condição mediana')\n",
     "plt.hist(dados.loc[dados.condition == 'fair']['price'],bins,edgecolor='white',density=True)\n",
     "plt.subplot(325)\n",
-    "plt.title('Preços dado que novo')\n",
+    "plt.title('Preços dada condição similar a novo')\n",
     "plt.hist(dados.loc[dados.condition == 'new']['price'],bins,edgecolor='white',density=True)\n",
     "plt.subplot(326)\n",
-    "plt.title('Preços dado que recuperado')\n",
+    "plt.title('Preços dada condição recuperado')\n",
     "plt.hist(dados.loc[dados.condition == 'salvage']['price'],bins,edgecolor='white',density=True)\n",
     "plt.show()\n"
    ]
