--- a/Predictor.ipynb
+++ b/Predictor.ipynb
@@ -1925,7 +1925,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Validação cruzada\n",
+    "\n",
+    "for linha in Dataset.sample(10).values:\n",
+    "    preco = linha.price\n",
+    "    filtrado = linha.iloc[:,25:]\n",
+    "    reg_tree = regressor.predict([filtrado])\n",
+    "    reg_linear = results.predict(filtrado)\n",
+    "    print(f'Preço real: {preco}. Preço calculado pela regressão linear: {reg_linear}. Preço calculado pela regressão de árvore de decisão: {reg_tree}.')\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -1947,7 +1958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
