--- a/Predictor.ipynb
+++ b/Predictor.ipynb
@@ -1779,7 +1779,9 @@
     "\n",
     "Árvores de decisão são um método que tem como objetivo criar um modelo para prever o valor de uma variável target ao aprender regras de decisão da série de dados das features. No caso da biblioteca utilizada o regeressor monta a melhor curva seno possível para aproximar uma regra no modelo if/else. Com quanto mais variáveis features (justificadas) o modelo for alimentado, maior será o número de ramificações, que aumentará a complexidade das regras e tornará o modelo mais confiável.\n",
     "\n",
-    "Bem como na regressão linear, deverão ser utilizadas variáveis dummy para trabalhar quantitativamente com variáveis qualitativas."
+    "Bem como na regressão linear, deverão ser utilizadas variáveis dummy para trabalhar quantitativamente com variáveis qualitativas.\n",
+    "\n",
+    "Um dos pontos negativos do uso de árvores de decisão é o overfitting, isto é, a alimentação de input irrelevante ou pouco diverso para a classificação, que pode tornar o resultado um simulacro da realidade. Por isso, deve-se ter cuidado com a alimentação de dados do modelo. Entretanto, em casos com uso de variáveis categóricas independentes e bases de dados com bastante ruído e grande número de amostras, árvores de decisão entregam melhores resultados que regressões lineares."
    ]
   },
   {
@@ -2108,6 +2110,8 @@
     "## Referências\n",
     "\n",
     "https://scikit-learn.org/stable/auto_examples/tree/plot_tree_regression.html\n",
+    "\n",
+    "https://towardsdatascience.com/comparative-study-on-classic-machine-learning-algorithms-24f9ff6ab222\n",
     "\n",
     "https://stackoverflow.com/questions/17614467/how-can-unrar-a-file-with-python\n",
     "\n",
